--- a/assets/style.css
+++ b/assets/style.css
@@ -6,3 +6,40 @@
   box-sizing: border-box;
 }
 
+.container-top {
+  width: 100%px;
+  max-width: 1200px;
+  height: 100px;
+  border: 1px solid black;
+  background-color: red;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.container-bottom {
+  width: 50%px;
+  max-width: 1200px;
+  height: 500px;
+  border: 1px solid black;
+  background-color: yellow;
+  text-align: center;
+  margin: 0 auto;
+  padding: 50px;
+}
+
+/* HEADER */
+
+.container h1 {
+  
+}
+
+/* MAIN */
+
+.container-bottom .contatti {
+  width: 360px;
+  height: 100px;
+  background-color: blue;
+  margin-top: 10px;
+  float: left;
+  border: 1px solid black;
+}
