--- a/assets/style.css
+++ b/assets/style.css
@@ -8,23 +8,24 @@
 
 .container-top {
   width: 100%px;
-  max-width: 1200px;
+  max-width: 1300px;
   height: 100px;
   border: 1px solid black;
   background-color: red;
   text-align: center;
   margin: 0 auto;
+  padding-top: 30px;
 }
 
 .container-bottom {
-  width: 50%px;
-  max-width: 1200px;
+  width: 10%px;
+  max-width: 1300px;
   height: 500px;
   border: 1px solid black;
   background-color: yellow;
   text-align: center;
   margin: 0 auto;
-  padding: 50px;
+  padding: 20px;
 }
 
 /* HEADER */
@@ -35,11 +36,21 @@
 
 /* MAIN */
 
+.container-bottom section p {
+  margin: 0 26px
+}
+
+
 .container-bottom .contatti {
   width: 360px;
   height: 100px;
   background-color: blue;
-  margin-top: 10px;
+  margin: 40px 0 0 40px;
   float: left;
   border: 1px solid black;
+}
+
+.contatti img{
+  float: left;
+  background-size: cover;
 }
