--- a/assets/style.css
+++ b/assets/style.css
@@ -4,14 +4,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Fredoka One', cursive;;
 }
 
 .container-top {
   width: 100%px;
   max-width: 1300px;
   height: 100px;
-  border: 1px solid black;
-  background-color: red;
   text-align: center;
   margin: 0 auto;
   padding-top: 30px;
@@ -21,8 +20,6 @@
   width: 10%px;
   max-width: 1300px;
   height: 500px;
-  border: 1px solid black;
-  background-color: yellow;
   text-align: center;
   margin: 0 auto;
   padding: 20px;
@@ -30,8 +27,8 @@
 
 /* HEADER */
 
-.container h1 {
-  
+.container-top h1 {
+  color: #E53170;
 }
 
 /* MAIN */
@@ -44,13 +41,30 @@
 .container-bottom .contatti {
   width: 360px;
   height: 100px;
-  background-color: blue;
+  background-color: #0F0E17;
   margin: 40px 0 0 40px;
   float: left;
-  border: 1px solid black;
 }
 
 .contatti img{
   float: left;
   background-size: cover;
+  height: 98px;
+  width: 100px;
+  margin-right: 20px;
 }
+
+.contatti h2 {
+  color: #FFFFFE;
+  float: left;
+}
+
+.contatti span {
+  color: #FFFFFE;
+  float: left;
+}
+
+.contatti a {
+  float: left;
+}
+
