--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,8 @@
   float: left;
   margin-top: 5px;
   font-family: 'Fredoka', sans-serif;
+  text-decoration: none;
+  color: rgb(121, 191, 245);
 }
 /* /Contatti */
 
