--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,6 @@
 }
 
 .container-bottom {
-  width: 10%px;
   max-width: 1300px;
   text-align: center;
   margin: 0 auto;
@@ -36,6 +35,7 @@
 /* Descrizione */
 .container-bottom section p {
   margin: 0 26px;
+  padding: 0 16px;
   font-family: 'Fredoka', sans-serif;
 }
 /* /Descrizione */
@@ -43,14 +43,13 @@
 /* Contatti */
 .container-bottom .contatti {
   width: 360px;
-  height: 100px;
   background-color: #0F0E17;
   margin: 40px 0 0 40px;
   float: left;
-  box-shadow: 3px 3px 3px 3px #D3D3D2;
+  box-shadow: 0px 0px 10px #000000;
 }
 
-.contatti img{
+.contatti img {
   float: left;
   background-size: cover;
   height: 98px;
